Fix navbar covering header
Previously, when you clicked a link in the contents of the about us page, the page would jump to the correct box, but the navbar would cover part of the header of the box. Now, the navbar stops above the header.

--- a/styles/about.css
+++ b/styles/about.css
@@ -28,6 +28,8 @@ hr.solid {
     margin: 5% 7%;
     padding: 2.5vw 5vw;
     box-shadow: 7px 7px 5px gray;
+
+    scroll-margin-top: 4em;
 }
 
 .box1 p {
